--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "14.2.4",
-    "@angular/core": "14.2.4",
-    "@angular/forms": "14.2.4",
-    "@angular/platform-browser": "14.2.4",
-    "@angular/platform-browser-dynamic": "14.2.4",
-    "@angular/router": "14.2.4",
+    "@angular/animations": "~15.0.3",
+    "@angular/common": "~15.0.3",
+    "@angular/compiler": "~15.0.3",
+    "@angular/core": "~15.0.3",
+    "@angular/forms": "~15.0.3",
+    "@angular/platform-browser": "~15.0.3",
+    "@angular/platform-browser-dynamic": "~15.0.3",
+    "@angular/router": "~15.0.3",
     "@capacitor-mlkit/barcode-scanning": "5.0.3",
     "@capacitor-mlkit/face-detection": "5.0.3-dev.1a9ddd6.1689870691",
     "@capacitor-mlkit/translation": "5.0.3",
@@ -32,22 +34,24 @@
     "@capacitor/keyboard": "5.0.0",
     "@capacitor/status-bar": "5.0.0",
     "@capawesome/capacitor-file-picker": "5.0.0",
+    "@po-ui/ng-components": "^15.7.1",
     "@ionic/angular": "6.2.9",
     "rxjs": "7.5.7",
     "tslib": "2.4.0",
-    "zone.js": "0.11.8"
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/architect": "0.1402.4",
-    "@angular-devkit/build-angular": "14.2.12",
-    "@angular-eslint/builder": "14.1.2",
-    "@angular-eslint/eslint-plugin": "14.1.2",
-    "@angular-eslint/eslint-plugin-template": "14.1.2",
-    "@angular-eslint/template-parser": "14.1.2",
-    "@angular/cli": "14.2.12",
-    "@angular/compiler": "14.2.4",
-    "@angular/compiler-cli": "14.2.4",
-    "@angular/language-service": "14.2.4",
+    "@angular-devkit/build-angular": "~15.0.3",
+    "@angular-eslint/builder": "15.1.0",
+    "@angular-eslint/eslint-plugin": "15.1.0",
+    "@angular-eslint/eslint-plugin-template": "15.1.0",
+    "@angular-eslint/schematics": "15.1.0",
+    "@angular-eslint/template-parser": "15.1.0",
+    "@angular/cli": "^15.2.8",
+    "@angular/compiler": "~15.0.3",
+    "@angular/compiler-cli": "~15.0.3",
+    "@angular/language-service": "~15.0.3",
     "@capacitor/cli": "5.0.0",
     "@ionic/angular-toolkit": "7.0.0",
     "@ionic/cli": "6.18.0",
@@ -68,7 +72,7 @@
     "prettier": "2.7.1",
     "puppeteer": "18.0.5",
     "ts-node": "10.9.1",
-    "typescript": "4.7.4"
+    "typescript": "~4.8.4"
   },
   "description": "Simple Ionic Angular app to demonstrate the use of certain Capacitor ML Kit plugins."
 }
